# maple-rag

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  TODO.md  docker-compose.yml  error.txt  pyproject.toml  test_error.txt
.github/workflows/: ci.yml  deploy.yml
docs/: IMPLEMENTATION_PLAN.md  SCRAPING_GUIDE.md  TODO_IaC_Migration.md  aws-setup.md  azure-setup.md
frontend/: index.html
frontend/css/: styles.css
frontend/js/: api.js  app.js
infrastructure/: main.bicep
infrastructure/docker/: init.sql
scripts/: incremental_ingest.py  init_db.py  migrate_db.py  run_scraper.py  test_bedrock.py  test_chat_with_citations.py  test_scraping.py
src/: __init__.py
src/agent/: __init__.py  graph.py  prompts.py  state.py
src/agent/nodes/: __init__.py  generator.py  guardrail.py  language.py  refusal.py  retriever.py
src/api/: __init__.py  main.py  scheduler.py  schemas.py
src/api/routes/: __init__.py  admin.py  chat.py  health.py
src/config/: logging.py  settings.py
src/db/: __init__.py  connection.py  models.py
src/db/repositories/: __init__.py  document.py  session.py
src/llm/: __init__.py  factory.py
src/scraper/: __init__.py  change_detector.py  chunker.py  crawler.py  ingestion.py  sitemap.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_agent.py  test_config.py  test_llm_factory.py  test_scraper.py
